--- a/manifests/overlays/prod/kustomization.yaml
+++ b/manifests/overlays/prod/kustomization.yaml
@@ -12,7 +12,7 @@ patchesStrategicMerge:
 - ingress.yaml
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namePrefix: prod-
+#namePrefix: prod-
 namespace: "82022583"
 images:
 - name: ceappacr.azurecr.io/82022583
